--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "hr-test-react",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
+    "lodash": "^4.17.15",
+    "moment": "^2.26.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
