--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
