--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "moment": "^2.26.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.2.0",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1"
   },
   "scripts": {
